Fix flickering hourmarker after rendered. close #103

--- a/src/css/week/time.styl
+++ b/src/css/week/time.styl
@@ -55,7 +55,6 @@
         z-index: 98
 
     .hourmarker-wrap
-        margin-left: 60px
         position: relative
 
     .hourmarker-line
